getting there yo

--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -10,7 +10,8 @@
     <body>
         <div id="page">
             <h1>Labby Mezzage</h1>
-            <div class="messageText"></div>
+            <div id="messageArea">
+            </div><!-- /end #messageArea tag -->
             
             <div id="board">
                 <p id="counter"></p>
