--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -13,13 +13,13 @@
             <div id="messageArea">
             </div><!-- /end #messageArea tag -->
             
-            <div id="board">
-                <p id="counter"></p>
+            <div id="inputArea">
+                <p id="counter">Inga meddelanden.</p>
                 <form>
          			<textarea name="text" placeholder="Vänligen skriv ditt meddelande här." id="textArea"></textarea><input id="send" type="submit" value="Skicka" />
          			<p id="value"></p>
         		</form>
-            </div><!-- /end #board tag -->
+            </div><!-- /end #inputArea tag -->
         </div><!-- /end #page tag -->
     </body>
 </html>
