--- a/2-labbymezzage/index.html
+++ b/2-labbymezzage/index.html
@@ -14,7 +14,7 @@
             </div><!-- /end #messageArea tag -->
             
             <div id="inputArea">
-                <p id="counter">Inga meddelanden.</p>
+                <p id="counter">Antal meddelanden: 0</p>
                 <form>
          			<textarea name="text" placeholder="Vänligen skriv ditt meddelande här." id="textArea"></textarea><input id="send" type="submit" value="Skicka" />
          			<p id="value"></p>
