getting nowhere, fast

--- a/3-gameon/memory/index.html
+++ b/3-gameon/memory/index.html
@@ -9,10 +9,7 @@
 </head>
     <body>
         <div id="page">
-            <h1>Memory</h1>
-            <p>Hej Jag skriver texten.</p>
-            <div id="messageArea">
-            </div><!-- /end #messageArea tag -->
+            <div id="memoryArea"></div><!-- /end #messageArea tag -->
             
             
         </div><!-- /end #page tag -->
