finished the quiz

--- a/3-gameon/memory/index.html
+++ b/3-gameon/memory/index.html
@@ -9,6 +9,7 @@
 </head>
     <body>
         <div id="page">
+            <h1>Memory</h1>
             <div id="memoryArea"></div><!-- /end #messageArea tag -->
             
             
