goings on with the pwd

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -4,14 +4,13 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen, projection, handheld">
 	<title>pwd</title>
-	<script data-main="scripts/main" src="scripts/require.js"></script>
-	<script id="template" type="x-tmpl-mustache">
-		<p>Hej {{ first }} {{ last }}!</p>
-		
-	</script>
+	<script src="scripts/main.js"></script>
 	
 </head>
     <body>
+    	<h1>...för att webben är det nya allt</h1>
+    	<div id="page"></div>
+    	
     	<div id="footer"></div>
     </body>
 </html>
