--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen, projection, handheld">
 	<title>pwd</title>
+	<script src="scripts/jquery.min.js"></script>
 	<script src="scripts/main.js"></script>
+	<script src="scripts/Windows.js"></script>
 	
 </head>
     <body>
