done with 3 plus a little extra

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -4,9 +4,7 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen, projection, handheld">
 	<title>pwd</title>
-	<script src="scripts/jquery.min.js"></script>
-	<script src="scripts/main.js"></script>
-	<script src="scripts/Windows.js"></script>
+	<script data-main="scripts/main" src="scripts/lib/require.js"></script>
 	
 </head>
     <body>
