getting along with jquery

--- a/5-pwd/index.html
+++ b/5-pwd/index.html
@@ -12,5 +12,11 @@
     	<div id="page"></div>
     	
     	<div id="footer"></div>
+    	
+    	<template id="images-template">
+    		<div class="imgBox">
+    			<a href="#"><img src={{thumbURL}} alt={{URL}}></a>
+    		</div>
+    	</template>
     </body>
 </html>
